fix #15: 3rd Person View (#20)
* feat: show pressed keys

* feat: add character controls class

* feat: add animation

* feat: adjust character movement animation

* feat: add pause overlay

* feat: remove unused model

* feat: add loading screen

* feat: adjust overlay

* feat: adjust camera min and max distance

* feat: increase house and floor size

* fix: start loading menu

* feat: update some comment

* fix: loading overlay

* fix: loading overlay not closing

* fix: not showing loading overlay on hard reset

* fix: start event not dispatching

* feat: remove console log

* feat: increase ghost and graveyard radius

* feat: increase stars and fix menu margin

--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,7 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: -10px;
 }
 
 .menu {
@@ -115,4 +116,28 @@ li {
 
 .unhide-menu {
   display: none;
+}
+
+#overlay {
+  position: fixed; /* Sit on top of the page content */
+  display: none; /* Hidden by default */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
+  z-index: 999; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer; /* Add a pointer on hover */
+}
+
+#overlay-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 50px;
+  color: white;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
 }
